flux/apps/ollama/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ollama
subsets:
  - addresses:
      - ip: 192.168.0.250
    ports:
      - port: 11434
        protocol: TCP
        name: ollama
