flux/apps/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ollama.danielpower.ca
      secretName: ollama-tls
  rules:
  - host: ollama.danielpower.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ollama
            port: 
              number: 80
